# python_project

./: pyproject.toml  tasks.py
project/mains/: main.py
tests/: test_main.py
